--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
 
         // ========== ULTIMATE AI CONFIG ==========
         // REPLACE THIS WITH YOUR ACTUAL NGROK URL AFTER RUNNING: ngrok http 5000
-        const AI_SERVER_URL = 'https://your-ngrok-url.ngrok-free.dev';
+        const AI_SERVER_URL = 'https://unaproned-paityn-superseraphic.ngrok-free.dev';
 
         async function compileToWebGL() {
             const pg = genPG(); // Get current genome
